tests/cases/should_fail/patterns/incomplete_range_pat.hash
// run=fail, stage=parse

main := () => {
    match k {
        1.. => {};
    }
};
