tests/cases/should_fail/patterns/incomplete_range_pat.stderr
error: expected an arrow `=>` 
 --> $DIR/incomplete_range_pat.hash:3:10
2 |       match k {
3 |           1.. => {};
  |            ^ here
4 |       }
